--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   },
   "private": true
 }
