Add missing packages

--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~51.0.9",
     "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.1"
+    "markdown-to-jsx": "^7.4.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "0.74.1",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
